--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    line-height: 1.4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Navbar Header */
+
+nav {
+    background-color: #223127;
+    color: white;
+    max-width: 1200px;
+    margin: 0 auto;
+    border-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.logoText {
+    font-size: 3rem;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.navItems {
+    flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+header a {
+    text-decoration: none;
+    color: white;
+}
+
+header a:hover {
+    border-bottom: 6px solid white;
+}
+
+/* hero Section */
+.hero {
+    max-width: 1200px;
+    margin: 30px auto;
+    background-color: #223127;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+}
+
+.hero img {
+    height: 900px;
+    width: 1200px;
+    margin-bottom: 33px;
+    width: 100%;
+  height: auto;
+}
+
+/* Footer */
+
+footer {
+    background-color: #223127;
+    color: white;
+    max-width: 1200px;
+    margin: 0 auto;
+    border-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    text-align: center;
+}
+
+.footer {
+    text-decoration: none;
+    color: white;
 }
